[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pearch-client"
version = "1.0.0"
description = "Python client library for the Pearch API"
readme = "README.MD"
requires-python = ">=3.8"
authors = [
    {name = "Pearch Team"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.8.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-dotenv",
]
dev = [
    "pytest>=7.0.0",
    "pytest-dotenv",
]

[project.urls]
"Repository" = "https://github.com/Pearch-ai/pearch-client"



[tool.setuptools.packages.find]
where = ["."]
include = ["pearch*"]

[tool.setuptools.package-dir]
pearch = "pearch"

[tool.black]
line-length = 120